compiler/tests/en/errors/arg_count.salam
// EXPECT: E012
func area(w i32, h i32 = 2) i32:
    ret w * h
end

func main:
    println(area())
end
